# agents

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/new_coder/: README.md  output.txt  pyproject.toml  series_calculation.txt
3_crew/new_coder/output/: code_and_output.txt
3_crew/new_coder/src/new_coder/: crew.py  main.py
3_crew/new_debate/: README.md  pyproject.toml  report.md
3_crew/new_debate/output/: oppose.md  propose.md
3_crew/new_debate/src/new_debate/: crew.py  main.py
3_crew/new_debate/src/new_debate/config/: agents.yaml
3_crew/new_engineering_team/: README.md  pyproject.toml
3_crew/new_engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/new_engineering_team/src/new_engineering_team/: crew.py  main.py
3_crew/new_engineering_team/src/new_engineering_team/config/: agents.yaml
3_crew/new_finance/: README.md  pyproject.toml
3_crew/new_finance/output/: report.md
3_crew/new_finance/src/new_finance/: crew.py  main.py
3_crew/new_stock_picker/: README.md  pyproject.toml
3_crew/new_stock_picker/src/new_stock_picker/: crew.py  main.py
3_crew/new_stock_picker/src/new_stock_picker/config/: agents.yaml
3_crew/new_stock_picker/src/new_stock_picker/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent.py  creator.py
5_autogen/sandbox/: flights.md
