[project]
name = "new_coder"
version = "0.1.0"
description = "new_coder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
new_coder = "new_coder.main:run"
run_crew = "new_coder.main:run"
train = "new_coder.main:train"
replay = "new_coder.main:replay"
test = "new_coder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
