[project]
name = "new_debate"
version = "0.1.0"
description = "new_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
new_debate = "new_debate.main:run"
run_crew = "new_debate.main:run"
train = "new_debate.main:train"
replay = "new_debate.main:replay"
test = "new_debate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
