[project]
name = "new_finance"
version = "0.1.0"
description = "new_finance using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
new_finance = "new_finance.main:run"
run_crew = "new_finance.main:run"
train = "new_finance.main:train"
replay = "new_finance.main:replay"
test = "new_finance.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
