[project]
name = "new_stock_picker"
version = "0.1.0"
description = "new_stock_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
new_stock_picker = "new_stock_picker.main:run"
run_crew = "new_stock_picker.main:run"
train = "new_stock_picker.main:train"
replay = "new_stock_picker.main:replay"
test = "new_stock_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
